@@ -132,6 +132,8 @@ Bug Fixes
 
 * SOLR-17337: Display all custom distributed stages in debug output. (Torsten Bøgh Köster, Christine Poerschke)
 
+* SOLR-17394: Detect and handle non-200 HTTP status codes for requests  made by IndexFetcher (Jason Gerlowski)
+
 Dependency Upgrades
 ---------------------
 * PR#2512: Update dependency com.carrotsearch:hppc to v0.10.0 (solrbot)
